...
        android:gravity="center"
        android:text="Please check your email and enter the verification code below"
        android:textColor="@color/ubc_darkblue"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Verification Code"
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="30sp" />

    <Button
        android:id="@+id/verify_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ubc_darkblue"
        android:text="Verify My Code" />

    <Button
        android:id="@+id/resend_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ubc_lightblue"
...
